# race-enginer

./: .env.example  .gitignore  README.md  build_overlay_exe.ps1  configure_local_piper.ps1  editdistance.py  main.py  opencode_agent.py  overlay_main.py  pyproject.toml  readme.md  requirements.txt
agents/: race_engineer_agent.py  strategy_agent.py
assets/: overlay_version_info.txt
db/: contracts.py  telemetry_repository.py  telemetry_schema.py  telemetry_store.py
desktop_app/: __init__.py  overlay_app.py  overlay_client.py  overlay_event_buffer.py  overlay_formatting.py  overlay_models.py  overlay_resources.py  overlay_settings.py  overlay_window.py
docs/: ARCHITECTURE.md  architecture.md  ea_overlay_safety.md  f1_official_telemetry_resources.md  f1_realism_research.md  llm_provider_guide.md  overlay_app.md  race_engineer_prompt_research.md  windows_distribution_standards.md
models/: api.py  engineer_agent.py  strategy.py  telemetry.py  telemetry_packets.py  voice.py
nodes/: race_engineer_nodes.py  strategy_analysis_nodes.py
prompts/: race_engineer_prompts.py  rebecca_profile.py  strategy_analysis_prompts.py
race_engineer/data/: store.py
race_engineer/feedback/: analyzer.py
race_engineer/intelligence/: advisor.py  models.py  strategy_team.py
race_engineer/telemetry/: models.py  parser.py
race_engineer/ui/: app.py
race_engineer/voice/: assistant.py
routes/: api_routes.py  dashboard_routes.py  route_context.py  web_dashboard.html  websocket_routes.py
services/: app_service.py  audio_input_service.py  audio_output_service.py  event_bus_service.py  feedback_service.py  http_server_service.py  llm_factory.py  llm_profile_service.py  mock_telemetry_scenarios.py  mock_telemetry_service.py  race_engineer_service.py  real_telemetry_service.py  telemetry_ctypes_service.py  telemetry_mode_service.py  telemetry_packet_conversion_service.py  telemetry_packet_registry.py  telemetry_state_service.py  voice_service.py
tests/: test_audio_services.py  test_event_bus.py  test_feedback_analyzer.py  test_llm_profile_service.py  test_overlay_event_buffer.py  test_overlay_formatting.py  test_overlay_resources.py  test_overlay_settings.py  test_race_engineer_agent.py  test_race_engineer_prompts.py  test_radio_character_guard.py  test_radio_personality.py  test_radio_text.py  test_session_state.py  test_strategy_analysis_nodes.py  test_strategy_snapshot_scope.py  test_telemetry_mode_service.py  test_telemetry_store_thread_safety.py  test_telemetry_support_coverage.py  test_voice_barge_in.py
tools/: strategy_snapshot_tool.py  telemetry_tools.py
utils/: collections.py  f1_25_strategy_knowledge.py  files.py  radio_character_guard.py  radio_context.py  radio_personality.py  radio_text.py  strategy_snapshot.py  telemetry_enums.py  text.py  track_strategy_profiles.py
workspace/: driver_profile.md  past_learnings.md
