[project]
name = "race-engineer"
version = "0.1.0"
description = "AI-powered race engineer for F1 telemetry, strategy, and voice comms"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5.2",
  "httpx>=0.28.1",
  "SpeechRecognition>=3.10.0",
  "PyAudio>=0.2.14",
  "fastapi>=0.105.0",
  "uvicorn>=0.24.0.post1",
  "websockets>=12.0",
  "duckdb>=0.9.2",
  "python-dotenv>=1.0.1",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-ollama>=0.2.0",
  "kokoro-onnx>=0.5.0",
  "faster-whisper>=1.1.1",
  "nemo-toolkit-asr>=2.4.0",
  "hydra-core>=1.3.2",
  "lightning>=2.5.0",
  "fiddle>=0.3.0",
  "cloudpickle>=3.0.0",
  "nv-one-logger-core>=2.3.1",
  "nv-one-logger-training-telemetry>=2.3.1",
  "nv-one-logger-pytorch-lightning-integration>=2.3.1",
  "lhotse>=1.31.0",
  "einops>=0.8.0",
  "transformers>=4.46.0",
  "sentencepiece>=0.2.0",
  "pandas>=2.3.0",
  "kaldialign>=0.9.2",
  "librosa>=0.11.0",
  "pyannote-core>=5.0.0",
  "braceexpand>=0.1.7",
  "webdataset>=0.2.110",
  "jiwer>=4.0.0",
  "datasets>=2.20.0",
  "pyannote-metrics>=4.0.0",
  "pyannote-database>=6.0.0",
  "ipython>=8.0.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",
  "nltk>=3.9.0",
  "pydub>=0.25.1",
  "sacrebleu>=2.5.0",
  "prettytable>=3.10.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.23.2",
  "black>=23.11.0",
  "ruff>=0.1.6",
  "pyinstaller>=6.16.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = [
  "desktop_app",
  "agents",
  "db",
  "models",
  "nodes",
  "prompts",
  "routes",
  "services",
  "tools",
  "utils",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

